test/syntax/expression/incrOnLValueBeforeAssign.out

*** Error line 2.
    i++ = asdf;
        ^
*** syntax error

